sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:10: error: value bubbleSort is not a member of Int
      a= a+1 bubbleSort(); 
             ^